--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,7 @@ RUN chmod ugo+x /usr/bin/*
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
 COPY resolv.conf /etc/resolv.conf
+COPY .bash_aliases /root
 
 # update
 RUN apt-get update
