--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,10 +26,10 @@ RUN \
         curl; \
     curl --silent --location https://deb.nodesource.com/setup_4.x | bash - ;\
     add-apt-repository ppa:fkrull/deadsnakes -y ; \
-    apt-get clean;\
-    apt-get update --fix-missing; \
-    apt-get dist-upgrade -y;
+    apt-get dist-upgrade -y
 
+RUN apt-get clean;\
+apt-get update --fix-missing; \
 # install basic software
 RUN apt-get -y install \
     sudo \
