--- a/mnt/home/dev/init/supervisord/mongod.conf
+++ b/mnt/home/dev/init/supervisord/mongod.conf
@@ -1,5 +1,6 @@
 [program:mongod]
 command=/usr/bin/mongod --smallfiles --config /etc/mongod.conf
+user=mongodb
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
