--- a/mnt/home/dev/init/config/redis.conf
+++ b/mnt/home/dev/init/config/redis.conf
@@ -81,7 +81,7 @@ protected-mode yes
 
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
-port 6379
+port 6380
 
 # TCP listen() backlog.
 #
@@ -243,7 +243,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir ./
+dir /var/lib/redis/
 
 ################################# REPLICATION #################################
 
@@ -447,7 +447,7 @@ slave-priority 100
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-# requirepass foobared
+requirepass U1EjrnxRIe5hLjpT 
 
 # Command renaming.
 #
