--- a/mnt/home/dev/init/config/redis_cache.conf
+++ b/mnt/home/dev/init/config/redis_cache.conf
@@ -196,11 +196,11 @@ databases 16
 #   points by adding a save directive with a single empty string argument
 #   like in the following example:
 #
-#   save ""
 
-save 900 1
-save 300 10
-save 60 10000
+# save 900 1
+# save 300 10
+# save 60 10000
+save ""
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
@@ -233,7 +233,7 @@ rdbcompression yes
 rdbchecksum yes
 
 # The filename where to dump the DB
-dbfilename dump.rdb
+dbfilename cache.rdb
 
 # The working directory.
 #
@@ -243,7 +243,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir ./
+dir /tmp/
 
 ################################# REPLICATION #################################
 
@@ -447,7 +447,7 @@ slave-priority 100
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-# requirepass foobared
+requirepass YCsSMDmw0OexuXE7 
 
 # Command renaming.
 #
