--- a/mnt/home/dev/init/config/mongod.conf
+++ b/mnt/home/dev/init/config/mongod.conf
@@ -27,7 +27,8 @@ net:
 #processManagement:
 
 security:
-    authorization : true
+    # authorization : disabled
+    authorization : enabled
 #operationProfiling:
 
 #replication:
