--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -136,7 +136,7 @@ RUN vim +PluginInstall +qall
 #RUN ./install.sh --clang-completer
 
 
-RUN pip install --upgrade pip virtualenv trash-cli hg-git
+RUN pip install --upgrade pip virtualenv trash-cli hg-git thefuck
 WORKDIR /home/dev
 RUN gem sources --add https://ruby.taobao.org/ --remove https://rubygems.org/
 RUN gem install sass gist 
