--- a/mnt/home/dev/init/supervisord/nginx.conf
+++ b/mnt/home/dev/init/supervisord/nginx.conf
@@ -1,7 +1,7 @@
-[program:mongod]
-command=/usr/bin/mongod --smallfiles --config /etc/mongod.conf 
-user=mongodb
+[program:nginx]
+command=/usr/local/openresty/nginx
+stdout_events_enabled=true
+stderr_events_enabled=true
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
-
