--- a/mnt/home/dev/init/config/nginx.conf
+++ b/mnt/home/dev/init/config/nginx.conf
@@ -29,7 +29,13 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
+    gzip_min_length 1k;
+    gzip_buffers 4 16k;
+    gzip_http_version 1.0;
+    gzip_comp_level 2;
+    gzip_types text/plain application/x-javascript text/css application/xml;
+
 
     server {
         listen       80;
