--- a/mnt/home/dev/init/config/nginx.conf
+++ b/mnt/home/dev/init/config/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  1;
 daemon off;
-#error_log  logs/error.log;
+error_log  /var/log/nginx/error.log;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
@@ -17,11 +17,11 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -29,13 +29,15 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    gzip  on;
-    gzip_min_length 1k;
-    gzip_buffers 4 16k;
-    gzip_http_version 1.0;
-    gzip_comp_level 2;
-    gzip_types text/plain application/x-javascript text/css application/xml;
+	gzip on;
+	#gzip_disable "msie6";
 
+	gzip_vary on;
+	gzip_proxied any;
+	gzip_comp_level 6;
+	gzip_buffers 16 8k;
+	gzip_http_version 1.1;
+	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen       80;
