--- a/mnt/home/dev/init/config/nginx.conf
+++ b/mnt/home/dev/init/config/nginx.conf
@@ -38,7 +38,7 @@ http {
 	gzip_buffers 16 8k;
 	gzip_http_version 1.1;
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
+    include /etc/nginx/conf.d/*.conf;
     server {
         listen       80;
         server_name  localhost;
