--- a/mnt/root/.hgrc
+++ b/mnt/root/.hgrc
@@ -50,3 +50,12 @@ blame = annotate --user --number
 bdiff = diff -r "max(ancestors('$1') and branch(default)):'$1'"
 slog = log --template '{rev}:{node|short} {desc|firstline}\n'
 vimdiff = resolve -t vimdiff $1
+
+[auth]
+#bb.prefix = https://www.kancloud.cn
+#bb.username =  
+#bb.password =  
+
+#bb.prefix = https://github.com
+#bb.username = 
+#bb.password = 
