--- a/mnt/home/dev/init/supervisord/elasticsearch.conf
+++ b/mnt/home/dev/init/supervisord/elasticsearch.conf
@@ -1,6 +1,6 @@
-[program:redis]
-command=/usr/local/bin/redis-server /etc/redis/redis.conf
-user=redis
+[program:elasticsearch]
+command=/usr/share/elasticsearch/bin/elasticsearch --default.path.home=/usr/share/elasticsearch --default.path.conf=/etc/elasticsearch
+user=elasticsearch
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
