--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,6 +29,7 @@ RUN \
 RUN apt-get clean;\
     apt-get update --fix-missing; \
     apt-get -y install \
+    postgresql postgresql-contrib postgresql-server-dev-all \
     gettext \
     python-pil \
     borgbackup \
@@ -188,8 +189,8 @@ RUN git clone https://github.com/gmarik/Vundle.vim.git /usr/share/vim/vimfiles/b
     vim +PluginInstall +qall;\
     sed -i '/colorscheme/ i colorscheme solarized'  /etc/vim/vimrc.local ;\
     pip install --upgrade pip virtualenv trash-cli hg-git thefuck ; \
-    gem sources --add https://ruby.taobao.org/ --remove https://rubygems.org/; gem install sass gist 
-
+    gem sources --add https://ruby.taobao.org/ --remove https://rubygems.org/; gem install sass gist \
+    pip3 install mako
 
 USER root
 COPY fix_print.py /usr/lib/python3.5/lib2to3/fixes/fix_print.py
