--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -189,7 +189,7 @@ RUN git clone https://github.com/gmarik/Vundle.vim.git /usr/share/vim/vimfiles/b
     vim +PluginInstall +qall;\
     sed -i '/colorscheme/ i colorscheme solarized'  /etc/vim/vimrc.local ;\
     pip install --upgrade pip virtualenv trash-cli hg-git thefuck ; \
-    gem sources --add https://ruby.taobao.org/ --remove https://rubygems.org/; gem install sass gist \
+    gem sources --add https://ruby.taobao.org/ --remove https://rubygems.org/; gem install sass gist ;\
     pip3 install mako
 
 USER root
