--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -190,7 +190,7 @@ RUN git clone https://github.com/gmarik/Vundle.vim.git /usr/share/vim/vimfiles/b
     sed -i '/colorscheme/ i colorscheme solarized'  /etc/vim/vimrc.local ;\
     pip install --upgrade pip virtualenv trash-cli hg-git thefuck ; \
     gem sources --add https://ruby.taobao.org/ --remove https://rubygems.org/; gem install sass gist ;\
-    pip3 install mako
+    apt-get -y install python3-pip; pip3 install mako
 
 USER root
 COPY fix_print.py /usr/lib/python3.5/lib2to3/fixes/fix_print.py
